# jarvis-gpt

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  FEATURE_WISHLIST.md  INTEGRATION_GUIDE.md  MODEL_MIGRATION_QWEN.md  README.md  docker-compose.yml  jarvis-mono-offload.cmd  jarvis-mono-perf.cmd  jarvis-mono.cmd  jarvis-start.cmd  jarvis-stop.cmd  jarvis-turbo.cmd  jarvis.cmd  jarvis.py  pyproject.toml
.audit/: .gitattributes  LATEST_FUNCTIONAL_RUN.txt  LATEST_STATIC_RUN.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  docker-entrypoint.sh  requirements-dev.txt  requirements-surfer.txt  requirements.txt
backend/scripts/: live_feature_smoke.py  live_tg_day_console_smoke.py  live_tg_remainder_smoke.py  live_tg_remainder_smoke2.py
backend/tests/: conftest.py  test_admin_api.py  test_agent.py  test_agent_account_context.py  test_agent_capability_authorization.py  test_agent_ingress_durability.py  test_agentic_loop.py  test_answer_quality_regressions.py  test_api_smoke.py  test_approval_executor.py  test_archive_formats_extended.py  test_archive_password.py  test_archive_search.py  test_browser_cdp.py  test_cognitive_memory.py  test_config_storage.py  test_deployment_contracts.py  test_dispatcher.py  test_document_date_recall.py  test_document_edit_routing.py  test_document_generation.py  test_document_memory.py  test_document_ocr.py  test_document_runtime.py  (+95 more)
docs/: MULTI_USER_SECURITY.md  architecture.md  assistant-notes.md  execution-capabilities.example.json  ideal-jarvis-roadmap.md  runtime.md
frontend/: .dockerignore  Dockerfile  lan-server.mjs  package-lock.json  package.json  proxy.ts
qa/: README.md  __init__.py  _trusted_jarvis_cli.py  cli.py  evidence.py  models.py  output.py  overlay.py  redaction.py  replay.py  runner.py  safe_paths.py  scenario_loader.py  schema_validation.py  trusted_anchors.py
scripts/: dev.ps1  dispatcher.ps1  docker_cleanup.sh  doctor.ps1  init_runtime.ps1  jarvis-launcher.ps1  smoke.py  start-stack.ps1  windows_rpc_bridge.py
(+603 files in other folders)
