[project]
name = "jarvis-gpt"
version = "0.1.0"
description = "Local-first JARVIS agent runtime for Windows, WSL2, Docker and a web Command Center."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pydantic==2.10.4",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.34.0",
  "websockets==16.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
]

[project.scripts]
jarvis-gpt = "jarvis_gpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/jarvis_gpt"]

[tool.pytest.ini_options]
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
