[project]
name = "jarvis-gpt"
version = "0.1.0"
description = "Local-first JARVIS agent runtime for Windows, WSL2, Docker and a web Command Center."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "python-multipart==0.0.32",
  "starlette==1.3.1",
  "uvicorn[standard]==0.34.0",
  "websockets==16.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.5.0",
  "pytest==9.0.3",
  "ruff==0.8.4",
]

[project.scripts]
jarvis-gpt = "jarvis_gpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/jarvis_gpt"]

[tool.hatch.build.targets.wheel.force-include]
"scripts/windows_rpc_bridge.py" = "jarvis_gpt/bundled/windows_rpc_bridge.py"

[tool.pytest.ini_options]
pythonpath = [".", "backend/src"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
